@@ -26,16 +26,39 @@ import java.util.*;
 import java.util.stream.Stream;
 
 public class GrassLogger {
-    private static final Logger log = (Logger) LoggerFactory.getLogger(GrassLogger.class);
+    private static final List<String> hyperbloomExceptions = List.of("Collei", "Alhatham");
+    private static final Map<AbilityReaction, ElementType> reactionElements = Map.of(
+        AbilityReaction.Burning, ElementType.Fire,
+        AbilityReaction.Overload, ElementType.Fire,
+        AbilityReaction.ElectroCharged, ElementType.Electric,
+        AbilityReaction.Superconduct, ElementType.Ice,
+        AbilityReaction.Shatter, ElementType.None,
+        AbilityReaction.Burgeon, ElementType.Grass,
+        AbilityReaction.SwirlPyro, ElementType.Fire,
+        AbilityReaction.SwirlHydro, ElementType.Water,
+        AbilityReaction.SwirlElectro, ElementType.Electric,
+        AbilityReaction.SwirlCryo, ElementType.Ice
+    );
+    private static final String[] elementNames = {
+        "Physical", "Pyro", "Hydro", "Dendro", "Electro", "Cryo",
+        "Frozen", "Anemo", "Geo", "AntiFire", "VehicleMuteIce",
+        "Mushroom", "Overdose", "Wood", "COUNT"
+    };
+    
     private static int uidCount = 0;
     private static long lastTime = 0;
+
     private static final Int2ObjectMap<String> avatarNameMap = new Int2ObjectLinkedOpenHashMap<>();
     private static final Map<String, AbilityControlBlock> abilityMap = new HashMap<>();
     private static final Int2IntMap reactionMap = new Int2IntOpenHashMap();
+
     private static final Int2IntMap gadgetOwnerMap = new Int2IntOpenHashMap();
     private static final Int2IntMap gadgetIdMap = new Int2IntOpenHashMap();
+    
     private static final Long2ObjectMap<MonsterAffix> monsterAffixMap = new Long2ObjectOpenHashMap<>();
     private static final Int2ObjectMap<String> monsterNameMap = new Int2ObjectOpenHashMap<>();
+
+    private static final Logger grassLogger = (Logger) LoggerFactory.getLogger(GrassLogger.class);
 
     private static String getUID() {
         return Integer.toString(++uidCount);
@@ -49,11 +72,6 @@ public class GrassLogger {
     }
 
     private static String getElementName(int elementId) {
-        String[] elementNames = {
-            "Physical", "Pyro", "Hydro", "Dendro", "Electro", "Cryo",
-            "Frozen", "Anemo", "Geo", "AntiFire", "VehicleMuteIce",
-            "Mushroom", "Overdose", "Wood", "COUNT"
-        };
         if (elementId == 255) return "Default";
         return elementNames[elementId];
     }
@@ -181,28 +199,15 @@ public class GrassLogger {
             if (aid == 2) {
                 if (mid == 5) return "Bloom";
                 else if (mid == 4) return "BountifulBloom";
-            } else if (aid == 1 && mid == 2 &&
-                !Objects.equals(attacker, "Collei")) {
-                return "Hyperbloom";
+            } else if (aid == 1 && mid == 2) {
+                if (!hyperbloomExceptions.contains(attacker))
+                    return "Hyperbloom";
             }
         }
 
         AbilityReaction reaction = AbilityReaction.getTypeByValue(aid);
-        if (reaction != null) {
-            if ((reaction == AbilityReaction.Burning && element != ElementType.Fire) ||
-                (reaction == AbilityReaction.Overload && element != ElementType.Fire) ||
-                (reaction == AbilityReaction.ElectroCharged && element != ElementType.Electric) ||
-                (reaction == AbilityReaction.Superconduct && element != ElementType.Ice) ||
-                (reaction == AbilityReaction.Shatter && element != ElementType.None) ||
-                (reaction == AbilityReaction.Burgeon && element != ElementType.Grass) ||
-                (reaction == AbilityReaction.SwirlPyro && element != ElementType.Fire) ||
-                (reaction == AbilityReaction.SwirlHydro && element != ElementType.Water) ||
-                (reaction == AbilityReaction.SwirlElectro && element != ElementType.Electric) ||
-                (reaction == AbilityReaction.SwirlCryo && element != ElementType.Ice)) {
-                return "None";
-            }
+        if (reaction != null && element == reactionElements.get(reaction)) 
             return reaction.toString();
-        }
         return "None";
     }
 
@@ -262,7 +267,7 @@ public class GrassLogger {
         int mid = attackResult.getAbilityIdentifier().getInstancedModifierId();
         int defenseId = attackResult.getDefenseId();
 
-        List<String> attackData = Arrays.asList(
+        List<String> attackData = List.of(
             getSource(attackerId, casterId, element, aid, defenseId),
             getAttacker(attackerId, casterId, aid),
             Float.toString(attackResult.getDamage()),
@@ -281,11 +286,11 @@ public class GrassLogger {
     }
 
     public static void logSkillCast(int skillId, int casterId) {
-        List<String> skillCastData = Arrays.asList(
+        List<String> skillCastData = List.of(
             getSkillName(skillId),
             getRoot(casterId)
         );
-        log("SKILL", skillCastData);
+        //log("SKILL", skillCastData);
     }
 
     public static void logTeamUpdate() {
@@ -300,12 +305,12 @@ public class GrassLogger {
             .withZone(ZoneId.systemDefault());
         String time = formatter.format(now);
         String deltaTime = getDeltaTime(now.toEpochMilli());
-        List<String> append = Arrays.asList(type, getUID(), time, deltaTime);
+        List<String> append = List.of(type, getUID(), time, deltaTime);
         List<String> row = Stream.concat(append.stream(), dataList.stream()).toList();
         log(String.join(",", row));
     }
 
     public static void log(String text) {
-        log.info(text);
+        grassLogger.info(text);
     }
 }
